--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         // Function to fetch weather data
         function fetchWeather() {
-            const city = document.getElementById("cityInput").value;
+            const city = document.getElementById("#cityInput").value;
             if (!city) {
                 alert("Please enter a city");
                 return;
